--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_LA_DOLCE_VITA_E9B94 }}'
-          projectId: la-dolce-vita-e9b94
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_LA_DOLCE_VITA_SOCIETY }}'
+          projectId: la-dolce-vita-society
