--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "^10.5.0",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
+    "save": "^2.9.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
