--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.12",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
-    "@angular/fire": "^7.6.1",
+    "@angular/fire": "^16.0.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.12",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
@@ -26,7 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
-    "firebase": "^10.5.0",
+    "firebase": "^10.6.0",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "save": "^2.9.0",
