--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@coreui/angular": "^4.5.27",
+    "@coreui/icons-angular": "^4.5.27",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
@@ -30,6 +32,7 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "firebase": "^10.6.0",
     "jquery": "^3.7.1",
+    "ngx-bootstrap": "^11.0.2",
     "rxjs": "~7.8.0",
     "save": "^2.9.0",
     "tslib": "^2.3.0",
