--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase": "^10.6.0",
     "jquery": "^3.7.1",
     "ngx-bootstrap": "^11.0.2",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "save": "^2.9.0",
     "tslib": "^2.3.0",
