--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@syncfusion/ej2-angular-richtexteditor": "^23.2.6",
     "firebase": "^10.6.0",
     "jquery": "^3.7.1",
     "ngx-bootstrap": "^11.0.2",
     "ngx-pagination": "^6.0.3",
+    "ngx-quill": "^24.0.2",
     "rxjs": "~7.8.0",
     "save": "^2.9.0",
     "tslib": "^2.3.0",
