--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/favicon_new.png",
               "src/assets"
             ],
             "styles": [
